--- a/angular.json
+++ b/angular.json
@@ -20,15 +20,8 @@
             "tsConfig": "tsconfig.app.json",
             "aot": true,
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": [
-              "src/styles.css",
-              "../node_modules/bootstrap/dist/css/bootstrap.css",
-              "../node_modules/font-awesome/css/font-awesome.css"
-            ],
-            "scripts": [
-              "../node_modules/jquery/dist/jquery.js",
-              "../node_modules/bootstrap/dist/js/bootstrap.js"
-            ]
+            "styles": ["src/styles.css"],
+            "scripts": []
           },
           "configurations": {
             "production": {
