--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@angular/platform-browser": "~10.0.3",
     "@angular/platform-browser-dynamic": "~10.0.3",
     "@angular/router": "~10.0.3",
+    "angular-font-awesome": "^3.1.2",
+    "angular2-flash-messages": "^3.0.1",
+    "bootstrap": "^4.5.0",
     "firebase": "^7.13.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
